# optimism-python

./: .gitignore  LICENSE  README.md  funding.json  pyproject.toml  requirements.txt
.github/workflows/: release.yml
optimism/: __init__.py  addresses.json  addresses.py  config.json  constants.py  contracts.py  cross_chain_messenger.py  types.py  utils.py
optimism/assets/: dispute_game_factory.json  fault_dispute_game.json  l1_cross_messenger.json  l2_cross_messenger.json  l2_output_oracle.json  l2_to_l1_message_passer.json  optimism_erc20.json
test/: README.md  extract_addresses.py  test_deposit.py  test_withdrawl.py  utils.py
