[tool.poetry]
name = "optimism-python"
version = "0.2.3"
description = "Unofficial Python Client for the OP-Stack"
authors = ["rafalum <rafalum@pm.me>"]
license = "MIT"
repository = "https://github.com/rafalum/optimism-python"
readme = "README.md"
packages = [
    { include = "optimism" },
]
include = ["optimism/assets/*.abi", "optimism/assets/*.json", "op.png"]

[tool.poetry.dependencies]
python = "^3.11"
web3 = "6.11.1"
python-dotenv = "1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
